fix project button text align

--- a/src/style.css
+++ b/src/style.css
@@ -38,4 +38,5 @@ body {
     border-radius: 5px;
     background-color: rgb(255, 207, 188);
     box-shadow: 2px 2px 5px rgba(163, 163, 163, 0.363);
+    text-align: start;
 }
